--- a/elapp/build.gradle
+++ b/elapp/build.gradle
@@ -145,4 +145,5 @@ dependencies {
     compile 'com.netflix.rxjava:rxjava-core:0.20.7'
     compile 'com.netflix.rxjava:rxjava-android:0.20.7'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
 }
