更改keystore，修复微信无法正常登陆的bug

--- a/elapp/android.keystore.properties
+++ b/elapp/android.keystore.properties
@@ -1,4 +1,4 @@
 STORE_FILE=./android.keystore
-STORE_PASSWORD=android
-KEY_ALIAS=androiddebugkey
-KEY_PASSWORD=android
+STORE_PASSWORD=123456
+KEY_ALIAS=hooview
+KEY_PASSWORD=123456
