--- a/elapp/build.gradle
+++ b/elapp/build.gradle
@@ -146,4 +146,6 @@ dependencies {
     compile 'com.netflix.rxjava:rxjava-android:0.20.7'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile 'com.jakewharton:butterknife:8.4.0'
 }
