更新聊天部分逻辑

--- a/EasyChat/src/main/AndroidManifest.xml
+++ b/EasyChat/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
         <!--选择联系人列表-->
         <activity
             android:name="com.easyvaas.common.chat.activity.FriendsSelectorListActivity"
-            android:theme="@style/my_actionbar_style" />
+            android:theme="@style/HooView_Theme"
+            />
 
         <!--我的群组-->
         <activity
