1.环信DEBUG 模式关闭 2.设置3屏缓存 3.build中 混淆 关闭

--- a/elapp/build.gradle
+++ b/elapp/build.gradle
@@ -90,7 +90,7 @@ android {
         }
         release {
             debuggable false
-            minifyEnabled true
+            minifyEnabled false
             shrinkResources true
             zipAlignEnabled true
             signingConfig signingConfigs.release
