1. 修复不断弹出登录页面的问题 2. 修复用户添加标签的 UI 问题 3. 修复偶尔没有得到火眼豆的问题 4. 修复退出登录过后 个人中心 页面的标签没有清空的问题

--- a/elapp/build.gradle
+++ b/elapp/build.gradle
@@ -10,7 +10,7 @@ android {
         multiDexEnabled true
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 10
+        versionCode 11
         versionName "2.1.0"
 
         resValue "string", "build_time", buildTime()
@@ -153,4 +153,5 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.github.lzyzsd:jsbridge:1.0.4'
+    compile 'com.nex3z:flow-layout:0.1.3'
 }
