1. 行情页 港股 数据加载错误的问题 2. 修复图文直播 直播页面 的时间显示问题

--- a/elapp/build.gradle
+++ b/elapp/build.gradle
@@ -91,7 +91,7 @@ android {
         release {
             debuggable false
             minifyEnabled false
-            shrinkResources true
+            shrinkResources false
             zipAlignEnabled true
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
