1.修复弹出输入框 布局上移 2.调整banner显示比例 3.去掉国际股票块的显示阴影

--- a/elapp/src/main/AndroidManifest.xml
+++ b/elapp/src/main/AndroidManifest.xml
@@ -226,7 +226,7 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateAlwaysVisible"/>
+            android:windowSoftInputMode="adjustPan|stateAlwaysVisible"/>
         <activity
             android:name="com.easyvaas.elapp.live.activity.LivePrepareActivity"
             android:screenOrientation="portrait"
@@ -487,7 +487,8 @@
         <activity
             android:name="com.easyvaas.elapp.ui.search.GlobalSearchActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan|stateAlwaysVisible"/>
         <activity
             android:name="com.easyvaas.elapp.ui.news.HooviewEyesNewsActivity"
             android:screenOrientation="portrait"
