--- a/elapp/build.gradle
+++ b/elapp/build.gradle
@@ -154,4 +154,5 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.github.lzyzsd:jsbridge:1.0.4'
     compile 'com.nex3z:flow-layout:0.1.3'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
 }
