1.自选列表修改 2.版本号升级

--- a/elapp/src/main/AndroidManifest.xml
+++ b/elapp/src/main/AndroidManifest.xml
@@ -536,6 +536,7 @@
         <activity
             android:name="com.easyvaas.elapp.ui.live.ImageTextLiveActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name="com.easyvaas.elapp.ui.live.MyImageTextLiveRoomActivity"
@@ -566,6 +567,7 @@
         <activity
             android:name="com.easyvaas.elapp.ui.search.SearchStockActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateVisible"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name="com.easyvaas.elapp.ui.user.UserAddLabelActivity"
