--- a/elapp/src/main/AndroidManifest.xml
+++ b/elapp/src/main/AndroidManifest.xml
@@ -413,9 +413,12 @@
         <!-- android:enabled="true" -->
         <!-- android:process=":remote"/> -->
         <!-- 环信 -->
+        <!--<meta-data-->
+            <!--android:name="EASEMOB_APPKEY"-->
+            <!--android:value="1150160929178497#hooview"/>-->
         <meta-data
             android:name="EASEMOB_APPKEY"
-            android:value="1150160929178497#hooview"/>
+            android:value="1150160929178497#hooviewtest"/>
         <!-- 声明sdk所需的service SDK核心功能 -->
         <service
             android:name="com.hyphenate.chat.EMChatService"
@@ -536,6 +539,7 @@
         <activity
             android:name="com.easyvaas.elapp.ui.live.ImageTextLiveActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name="com.easyvaas.elapp.ui.live.MyImageTextLiveRoomActivity"
