--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
         classpath "io.realm:realm-gradle-plugin:3.0.0-SNAPSHOT"
+        classpath 'com.growingio.android:vds-gradle-plugin:0.9.103'
         //classpath "net.rdrei.android.buildtimetracker:gradle-plugin:0.5.0"
         //classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.1.2'
         //classpath 'com.mogujie.gradle:tinyPicPlugin:1.1.4'
