--- a/elapp/build.gradle
+++ b/elapp/build.gradle
@@ -159,4 +159,5 @@ dependencies {
     compile 'com.nex3z:flow-layout:0.1.3'
     compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     compile 'com.growingio.android:vds-android-agent:0.9.103@aar'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
