--- a/elapp/build.gradle
+++ b/elapp/build.gradle
@@ -160,4 +160,6 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     compile 'com.growingio.android:vds-android-agent:0.9.103@aar'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+//    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+//    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
 }
