1.首页tab导航 2.添加部分基类

--- a/elapp/build.gradle
+++ b/elapp/build.gradle
@@ -174,6 +174,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
+    compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+
+
 
 
 }
