--- a/elapp/build.gradle
+++ b/elapp/build.gradle
@@ -177,6 +177,7 @@ dependencies {
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
 
     compile 'com.github.Hitomis:CrazyShadow:v1.0.1'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.12'
 
 
 }
