1 封装基类 2 专题部分界面

--- a/elapp/src/main/AndroidManifest.xml
+++ b/elapp/src/main/AndroidManifest.xml
@@ -574,6 +574,10 @@
             android:name="com.easyvaas.elapp.ui.user.UserAddLabelActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name="com.easyvaas.elapp.ui.news.TopicActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.FullScreen"/>
 
     </application>
 
