1.优化列表性能 2.编写部分专题

--- a/elapp/src/main/AndroidManifest.xml
+++ b/elapp/src/main/AndroidManifest.xml
@@ -577,7 +577,7 @@
         <activity
             android:name="com.easyvaas.elapp.ui.news.TopicActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.FullScreen"/>
+            android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
 
