1 用户中心逻辑 2 搜索 历史记录 收藏 完成

--- a/elapp/src/main/AndroidManifest.xml
+++ b/elapp/src/main/AndroidManifest.xml
@@ -591,6 +591,10 @@
             android:name="com.easyvaas.elapp.ui.user.newuser.activity.UserHistoryNewActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name="com.easyvaas.elapp.ui.user.newuser.activity.UserCollectionNewActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
