1 重写粉丝和关注界面 2 为个界面添加无数据时候 不同提示文字 3 基类添加 initSomeData() 方法便于 接收传递参数或其他数据初始化 4 普通用户主页 部分界面 5 添加 无数据返回时候的 NoResponeBackModel 6 添加部分逻辑

--- a/elapp/src/main/AndroidManifest.xml
+++ b/elapp/src/main/AndroidManifest.xml
@@ -604,6 +604,18 @@
             android:name="com.easyvaas.elapp.ui.user.newuser.activity.UserVipPageActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name="com.easyvaas.elapp.ui.user.newuser.activity.UserFansActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name="com.easyvaas.elapp.ui.user.newuser.activity.UserFocusActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name="com.easyvaas.elapp.ui.user.newuser.activity.UserPageActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
