1 视频直播界面 弹出输入框 统一修改 2 视频评论 视频推荐 3 资讯UI界面修改 banner动效

--- a/elapp/src/main/AndroidManifest.xml
+++ b/elapp/src/main/AndroidManifest.xml
@@ -469,7 +469,8 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"/>
+            android:windowSoftInputMode="adjustResize|stateHidden"
+            />
         <activity
             android:name="com.easyvaas.elapp.ui.market.GlobalContentEditActivity"
             android:configChanges="orientation"
