1 新闻评论页 2 banner标题 3 阅读置灰 4 详情接口

--- a/elapp/src/main/AndroidManifest.xml
+++ b/elapp/src/main/AndroidManifest.xml
@@ -626,6 +626,11 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name="com.easyvaas.elapp.ui.news.NewsDetailCommentActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
